Fix content spacing

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -18,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -25,11 +26,14 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
 }
 
 ul {
-  list-style-type: none;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
 
 a {
@@ -40,6 +44,7 @@ a {
 .header, .footer {
   display: flex;
   justify-content: space-between;
+  padding: 16px;
 }
 
 .footer {
@@ -47,13 +52,10 @@ a {
 }
 
 .content {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.left-links, .right-links {
-  display: flex;
+  justify-content: center;
   gap: 16px;
-  margin: 16px;
 }
